--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
-title: Jekyll AsciiDoc Quickstart
+title: My Tech Blog
 # uncomment baseurl if you want to publish the site to a subfolder
 #baseurl: /blog
-description: The Jekyll AsciiDoc Quickstart project is a leg-up in starting your own website hosted on GitHub with content based in AsciiDoc.
+description: Something interesting
 exclude:
 - LICENSE
 - README.adoc
@@ -17,7 +17,3 @@ asciidoctor:
     idseparator: _
     stylesdir: css
     source-highlighter: coderay
-
-collections:
-  blog:
-    output: true
